objects/User_Deactivation__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting is used in BatchDeactivateUser</description>
    <fields>
        <fullName>Email_To_Be_Excluded__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email To Be Excluded</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive_Days__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Inactive Days</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Excluded__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Profile Excluded</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UsersExcluded__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>UsersExcluded</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>User Deactivation</label>
</CustomObject>